Tue May 23 16:49:22 2006  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeProjectCreator.pm (fill_value): If an include
          path begins with ".." (a relative path), prefix it with $(srcdir)
          to make it work properly when the build dir is not the same as the
          source dir.

Thu May 11 11:46:45 2006  Steve Huston  <shuston@riverace.com>

        * templates/automake.mpd: Allow an am_release variable to set
          a installable library's -release option. This allows users to
          choose whether to use libtool's -version-info option (with the
          am_version variable) or the -release option (with am_release).

Fri May  5 12:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/BDSWorkspaceCreator.pm:
          Generate missing </BorlandProject>

Wed May  3 01:43:46 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:

          Documented the -gendot option which generates input files for
          Graphvis.

        * modules/BMakeProjectCreator.pm:
        * modules/Creator.pm:
        * modules/DirectoryManager.pm:
        * modules/Driver.pm:
        * modules/FeatureParser.pm:
        * modules/GUID.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:

          Adding various performance improvements.

        * templates/makedll.mpt:

          Changing the order of the rt and pthread libraries to avoid
          possible linking problems when statically linking.

Tue Apr 25 13:18:06 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Print error messages in the event that an error actually occurs.

        * prj_install.pl:

          Added a missing option from the usage.

        * templates/nmake.mpd:
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:
