@@ -12,6 +12,8 @@ eval '(exit $?0)' && eval 'exec perl -w -S $0 ${1+"$@"}'
 # Pragma Section
 # ******************************************************************
 
+require 5.006;
+
 use strict;
 use Config;
 use FindBin;
