@@ -1,3 +1,14 @@
+Tue May 30 12:21:54 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Driver.pm:
+
+          Removed the run-time check for the minimum perl version.
+
+        * mpc.pl:
+        * mwc.pl:
+
+          Added a load-time check for the minimum perl version (5.6).
+
 Tue May 23 16:49:22 2006  Steve Huston  <shuston@riverace.com>
 
         * modules/AutomakeProjectCreator.pm (fill_value): If an include
